# python-ferret

./: .gitignore  .pdm.toml  Dockerfile  Makefile  info.py  pyproject.toml  setup.py
.github/workflows/: main.yml
example/: example.fql  example.py
pferret/: wrapper.py
pferret/lib/: fetch.go  go.mod  go.sum  helpers.go  libferret.h  main.go  parquet.go  sitemap.go  trafilatura.go  urls.go
