[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "setuptools>=67.3.2",
    "wheel>=0.38.4",
]

[project]
name = "python-ferret"
version = "0.2.1"
description = ""
authors = [
    {name = "arttii", email = "a.topchyan@krz.am"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["classifiers"]
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
