[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "setuptools>=67.3.2",
    "wheel>=0.38.4",
]

[project]
name = "python_ferret"
version = "0.2.3"
description = "Python wrapper over Ferret written in C with some additional functions"
authors = [
    {name = "Artyom Topchyan",email = "a.topchyan@krz.am"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
 
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
]
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["."]


[tool.setuptools.package-data]
pferret = ['lib/go.sum','lib/go.mod','lib/*.go','lib/libferret.h','lib/libferret.so']